# dxtr

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  dev_sglang.py  docker-compose.yaml  litellm_config.yaml  pyproject.toml  pytest.ini  start_server.py  start_sglang.py
docker/: Dockerfile.dxtr  Dockerfile.frontend  Dockerfile.litellm  Dockerfile.papers-service
docker/docling/: server.py
dxtr/: __init__.py  bus.py  cli.py  config.py  constants.py  data_models.py  db.py  docling_utils.py  papers_etl.py  server.py  storage.py  util.py
dxtr/agents/: base.py  master.py  system.md  util.py
dxtr/base/: agent.py
dxtr/sessions/: cache.db  cache.db-shm  cache.db-wal
eval/: llm_as_a_judge.md
eval/e2e_journey/: __init__.py  run_eval.py
eval/papers_ranking/: eval.py  ground_truth_jan01.json
eval/profile_creation/: eval.py
eval/profile_manager/: eval.py
frontend/: index.html  package-lock.json  package.json  vercel.json
frontend/src/: App.tsx  api.ts
migrations/: create_paper_rankings_table.py  create_papers_table.py  create_user_facts_table.py  create_user_profiles_table.py  create_user_rankings_table.py
services/: __init__.py  update_papers.py
tests/: __init__.py  conftest.py  mocks.py  test_conversational.py  test_integration.py  test_paper_rankings.py  test_prepend_content.py  test_thinking_leakage.py  test_tool_calling.py  test_tool_routing.py  test_user_facts.py  test_user_journey.py  test_util.py
tests/artifacts/: test_01_multi_turn_builds_profile_20260131_214213.json
tests/datasets/: __init__.py  tool_routing.py
(+42 files in other folders)
